# Anima

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  ARCHITECTURE_GUARDRAILS.md  ARCHITECTURE_GUARDRAILS.zh-CN.md  CHANGELOG.md  CLAUDE copy.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  amqtt.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml
.cursor/rules/: Architecture-Guardrails.mdc  Branch-And-Commit-Workflow.mdc  Change-Scope-Control.mdc  Changelog-And-Versioning-Discipline.mdc  Community-Standards-And-Contributor-Experience.mdc  Continuous-Execution-Until-Done.mdc  Dependency-And-Interface-Safety.mdc  Docs-And-Runbook-Sync.mdc  English-First-Engineering-Workflow.mdc  GitHub-MCP-Available.mdc  License-And-Dependency-Compliance.mdc  Migration-And-Backward-Compatibility.mdc  Open-Source-Contribution-Workflow.mdc  Pull-Request-Readiness-And-Reviewer-Hygiene.mdc  Repo-Navigation-And-Module-Ownership.mdc  Secrets-And-Environment-Safety.mdc  Self-Install-Tools-And-MCP-When-Necessary.mdc  Test-First-For-Bugs-And-Regression.mdc  Verification-And-Regression-Checks.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/: base.py
adapters/miot/: adapter.py  (+5 more)
core/: chat_agent.py  discovery.py  main.py  models.py
dashboard/: README.md  index.html  package.json
data/: xiaomi_mina_token.json
scripts/: dev.mjs
tests/: test_integration.py
(+154 files in other folders)
