[project]
name = "anima"
version = "0.1.0"
description = "Make Every Hardware Intelligent — an open-source Agent OS for hardware intelligence"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiomqtt>=2.3.0",
    "langgraph>=0.3.0",
    "openai>=1.0.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "socksio>=1.0.0",
    "amqtt>=0.11.3",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
miot = [
    "python-miio>=0.5.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
anima = "core.main:cli_entry"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]


